@@ -3850,10 +3850,10 @@ with \Y. ---/
 /((?2))((?1))/SS
     abc
 
-/((?(R2)a+|(?1)b))/
+/((?(R2)a+|(?1)b))/SS
     aaaabcde
 
-/(?(R)a*(?1)|((?R))b)/
+/(?(R)a*(?1)|((?R))b)/SS
     aaaabcde
 
 /(a+|(?R)b)/
